--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ink"]
-    path = stack/ink
-    url = http://github.com/sapo/ink.git
+[submodule "stack/ink"]
+	path = stack/ink
+	url = http://github.com/sapo/ink.git
